--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,12 +1,18 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container"> 
-        <a class="navbar-brand" href="#">Dating App</a>
+        <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
 
         @if (accountService.currentUser()) {
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item"> <a class="nav-link">Matches</a> </li>
-            <li class="nav-item"> <a class="nav-link">Lists</a> </li>
-            <li class="nav-item"> <a class="nav-link">Messages</a> </li>
+            <li class="nav-item"> 
+                <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a> 
+            </li>
+            <li class="nav-item"> 
+                <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a> 
+            </li>
+            <li class="nav-item"> 
+                <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a> 
+            </li>
         </ul>
         }
 
@@ -31,6 +37,7 @@
             <input name="password"
             [(ngModel)]="model.password"
             class="form-control me-2" 
+            type="password"
             placeholder="Password">
             <button class="btn btn-outline-success" type="submit">Login</button>
         </form>
