--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container"> 
         <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
 
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
         @if (accountService.currentUser()) {
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item"> 
                 <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a> 
             </li>
@@ -13,12 +13,14 @@
             <li class="nav-item"> 
                 <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a> 
             </li>
-        </ul>
         }
+        </ul>
 
         @if (accountService.currentUser()) {
             <div dropdown class="dropdown">
-                <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome User</a>
+                <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
+                    Welcome {{accountService.currentUser()?.username | titlecase}}
+                </a>
                 <div *dropdownMenu="" class="dropdown-menu">
                     <a class="dropdown-item">Edit Profile</a>
                     <div class="dropdown-divider"></div>
@@ -39,7 +41,7 @@
             class="form-control me-2" 
             type="password"
             placeholder="Password">
-            <button class="btn btn-outline-success" type="submit">Login</button>
+            <button class="btn btn-success" type="submit">Login</button>
         </form>
         }
     </div>
